[package]
name = "viewers-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
twitch_api2 = { version = "0.6.1", features = ["client", "tmi", "reqwest"] }
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }
ctrlc = "3.2.5"
chrono = "0.4.23"
